# AI-Emailyzer

./: README.md  pyproject.toml  requirements.txt  setup.py  sonar-project.properties  tox.ini
.github/workflows/: ci.yml
src/: app.py  inventory_generator.py  price_generator.py  report_generator.py
src/models/: attachment.py  consolidated_sheet.py  message.py  real_time_pricing_details.py  report_sheet_item.py  separate_sheet_metadata.py
tests/: test-attachment.xlsx  test_app.py  test_excel_generator.py  test_inventory_generator.py  test_price_generator.py
