[tool.poetry]
name = "ai-excel-generator"
version = "0.1.0"
description = "Script to login to an Outlook account that consents basic permissions required to read and download Emails, analyse them and genereate a consolidated offer sheet with adjusted pricing with the help of PriceRunner."
authors = ["Vallabha Systems Ltd."]
license = "Proprietary License TBD"
readme = "README.md"
packages = [
    { include = "tests" }
]

[tool.poetry.dependencies]
python = "^3.9"
msal = "1.28.0"
requests = "2.32.3"
black = "^24.4.2"
python-dotenv = "^1.0.1"
openai = "^1.35.3"
loguru = "^0.7.2"
openpyxl = "^3.1.4"
pytest = "^8.2.1"
pandas = "^2.2.2"
hydra-core = "^1.3.2"
numpy = "^1.26.2"
omegaconf = "^2.3.0"
xlrd = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.pytest.ini_options]
testpaths = ["tests"]
